--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzy &trade;</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="questions.js" defer></script>
-    <script src="https://kit.fontawesome.com/d75e165c56.js" crossorigin="anonymous" defer></script>
+    <script src="https://kit.fontawesome.com/d75e165c56.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="logo">
@@ -26,6 +25,7 @@
 
         <div id="questionContainer">
             <div class="scoreContainer">
+                <h2 id="questionNumber"></h2>
                 <h2 id="scoreCount"></h2>
             </div>
             <h1 id="question"></h1>
